[gd_scene load_steps=14 format=3 uid="uid://dftshcqca2sob"]

[ext_resource type="Script" uid="uid://dyei3kgyaaepn" path="res://script/menu.gd" id="1_6cdou"]
[ext_resource type="Texture2D" uid="uid://c1s21ys4rwo76" path="res://assets/sprites/Outros/botoes/normal/jogar_normal_20250926193006.png" id="1_con2f"]
[ext_resource type="Texture2D" uid="uid://djinkpr36cpwa" path="res://assets/sprites/Outros/botoes/clicado/jogar_click_20250926193017.png" id="2_mhnvy"]
[ext_resource type="Texture2D" uid="uid://cebhwfwew1kbu" path="res://assets/sprites/Outros/botoes/hover/jogar_hover_20250926193012.png" id="3_4ytvr"]
[ext_resource type="Texture2D" uid="uid://doglm2slulept" path="res://assets/sprites/Outros/botoes/normal/guia_normal_20250926193024.png" id="4_ufwb2"]
[ext_resource type="Texture2D" uid="uid://bdp3a3gm8x5k4" path="res://assets/sprites/Outros/botoes/clicado/guia_click_20250926193037.png" id="5_6cdou"]
[ext_resource type="Texture2D" uid="uid://c52scc43h17k0" path="res://assets/sprites/Outros/botoes/hover/guia_hover_20250926193032.png" id="6_i42df"]
[ext_resource type="Texture2D" uid="uid://bd8cm4hvmolsn" path="res://assets/sprites/Outros/botoes/normal/sair_normal_20250926193042.png" id="7_7jp70"]
[ext_resource type="Texture2D" uid="uid://dv1t83vduehum" path="res://assets/sprites/Outros/botoes/clicado/sair_click_20250926193052.png" id="8_mxgkd"]
[ext_resource type="Texture2D" uid="uid://dikjef0sqpk5g" path="res://assets/sprites/Outros/botoes/hover/sair_hover_20250926193047.png" id="9_g6gyw"]
[ext_resource type="Texture2D" uid="uid://dr8615aycqxr3" path="res://assets/sprites/Outros/botoes/normal/creditos_normal_20250926193059.png" id="10_3dmrc"]
[ext_resource type="Texture2D" uid="uid://6nctjwskkrut" path="res://assets/sprites/Outros/botoes/clicado/creditos_click_20250926193108.png" id="11_81l6r"]
[ext_resource type="Texture2D" uid="uid://5dtrw726gnjf" path="res://assets/sprites/Outros/botoes/hover/creditos_hover_20250926193104.png" id="12_rsfmq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cdou")

[node name="jogar" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -188.0
offset_right = 136.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_con2f")
texture_pressed = ExtResource("2_mhnvy")
texture_hover = ExtResource("3_4ytvr")
stretch_mode = 0

[node name="guia" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -92.0
offset_right = 136.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_ufwb2")
texture_pressed = ExtResource("5_6cdou")
texture_hover = ExtResource("6_i42df")
stretch_mode = 0

[node name="sair" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = 4.0
offset_right = 135.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_7jp70")
texture_pressed = ExtResource("8_mxgkd")
texture_hover = ExtResource("9_g6gyw")
stretch_mode = 0

[node name="creditos" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = 92.0
offset_right = 136.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_3dmrc")
texture_pressed = ExtResource("11_81l6r")
texture_hover = ExtResource("12_rsfmq")
stretch_mode = 0

[connection signal="pressed" from="jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="guia" to="." method="_on_guia_pressed"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="creditos" to="." method="_on_creditos_pressed"]
